fixed all masonry grid settings and input first post box content with proper spacings

--- a/css/theme/style.css
+++ b/css/theme/style.css
@@ -2479,6 +2479,33 @@ h2, h3, h4 {
       letter-spacing: 0.09px;
       padding: 0px 40px 0px 0px; } }
 
+.post-title, .post-date, .post-content, .read-more-color {
+  color: #000000; }
+
+.post-title {
+  font-size: 1.875em;
+  letter-spacing: 0.12px;
+  line-height: 33px;
+  margin-top: 0px;
+  margin-bottom: 0px; }
+
+.post-date {
+  opacity: 0.8;
+  font-size: 1.0625em;
+  letter-spacing: 0.14px;
+  margin-top: 8px;
+  margin-bottom: 0px; }
+
+.post-content {
+  font-size: 1.25em;
+  letter-spacing: 0.16px;
+  line-height: 26px;
+  margin-top: 18px;
+  margin-bottom: 0px; }
+
+.read-more-color {
+  font-weight: 400; }
+
 /* ------------------------- *\
 
     # About Page #
@@ -3558,5 +3585,38 @@ position: relative; */
   @media screen and (min-width: 1000px) {
     .insights-hero-text {
       padding: 246px 0px 0px 65px; } }
+
+.insight-content {
+  padding: 60px 20px;
+  background-color: #f5f5f5; }
+
+.super-wrapper {
+  max-width: 1005px;
+  margin: 0 auto; }
+
+/* ---- post-grid ---- */
+.post-grid {
+  /* center */
+  margin: 0 auto; }
+
+/* ---- post-item ---- */
+.post-sizer {
+  width: 280px; }
+  @media screen and (min-width: 360px) {
+    .post-sizer {
+      width: 315px; } }
+
+.post-item {
+  float: left;
+  background: #FFFFFF;
+  box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.5);
+  margin-bottom: 30px;
+  padding: 30px; }
+
+.insight-area {
+  margin-top: 27px; }
+
+.arrow-at-insight {
+  width: 13px; }
 
 /*# sourceMappingURL=style.css.map */
