--- a/sass/partials/_main.scss
+++ b/sass/partials/_main.scss
@@ -1304,4 +1304,84 @@ hr {
   }
 }
 
+.insight-content {
+  padding: 60px 20px;
+  background-color: #f5f5f5;
+}
+
+.super-wrapper {
+  max-width: 1005px;
+  margin: 0 auto;
+}
+
+/* ---- post-grid ---- */
+
+.post-grid {
+  /* center */
+  margin: 0 auto;
+}
+
+/* ---- post-item ---- */
+
+.post-sizer {
+  width: 280px;
+
+  @include at-query(360px){
+    width: 315px;
+  }
+}
+
+.post-item {
+  float: left;
+  background: $colorBGwhite;
+  box-shadow: 0 0 2px 0 rgba(0,0,0,0.50);
+  margin-bottom: 30px;
+  padding: 30px;
+}
+
+.insight-area {
+  margin-top: 27px;
+}
+
+.arrow-at-insight {
+  width: 13px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
